<resources>
    <string name="app_name">ProgrammerCalculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="allClear">AC</string>
    <string name="DEC">DEC</string>
    <string name="HEX">HEX</string>
    <string name="OCT">OCT</string>
    <string name="BIN">BIN</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="mod">MOD</string>
    <string name="AND">AND</string>
    <string name="OR">OR</string>
    <string name="XOR">XOR</string>
    <string name="NAND">NAND</string>
    <string name="NOR">NOR</string>
    <string name="XNOR">XNOR</string>
    <string name="NOT">NOT</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="DEL">DEL</string>

    <string name="signed32bit">32-bit Signed</string>
    <string name="signed16bit">16-bit Signed</string>
    <string name="unsigned16bit">16-bit Unsigned</string>
    <string name="signed8bit">&#160;8-bit Signed</string>
    <string name="unsigned8bit">&#160;8-bit Unsigned</string>
    <string name="unsigned4bit">&#160;4-bit Unsigned</string>

    <string name="procal">Procal Development Team</string>
    <string name="devteam">Jessica Cramer, Hannah Goett, Ashley Holcomb, Riley Judd, Arthur LeVan, Samuel Lomanto, Braydon Rekart, Dakota Tebbe, Drew Hans</string>

</resources>

